package dk.hrpclausen.consentcoin.model;

public class BlockchainDAO implements DatabaseDAO{
    @Override
    public void pushToDatabaseConsent(String text) {

    }

    @Override
    public void pushToDatabaseAnmodning(String text) {

    }
}
