package dk.hrpclausen.consentcoin.model;
// Er ikke implementeret
public class MySQLDAO implements DatabaseDAO {
    @Override
    public void pushToDatabaseConsent(String text) {

    }

    @Override
    public void pushToDatabaseAnmodning(String text) {

    }
}
