package dk.hrpclausen.consentcoin.model;

public class Person extends Bruger {

    String cpr;

    public String getCpr() {
        return cpr;
    }

    public void setCpr(String cpr) {
        this.cpr = cpr;
    }

}

