@startuml

title __APP's Class Diagram__\n

  package dk.hrpclausen.consentcoin {
    package dk.hrpclausen.consentcoin.view {
      class Anmodning {
      }
    }
  }
  

  package dk.hrpclausen.consentcoin {
    package dk.hrpclausen.consentcoin.model {
      class BlockchainDAO {
      }
    }
  }
  

  package dk.hrpclausen.consentcoin {
    package dk.hrpclausen.consentcoin.model {
      class Bruger {
      }
    }
  }
  

  package dk.hrpclausen.consentcoin {
    class BuildConfig {
    }
  }
  

  package dk.hrpclausen.consentcoin {
    package dk.hrpclausen.consentcoin.model {
      interface DatabaseDAO {
      }
    }
  }
  

  package dk.hrpclausen.consentcoin {
    package dk.hrpclausen.consentcoin.model {
      class FirebaseDAO {
      }
    }
  }
  

  package dk.hrpclausen.consentcoin {
    package dk.hrpclausen.consentcoin.view {
      class GivTilladelse {
      }
    }
  }
  

  package dk.hrpclausen.consentcoin {
    package dk.hrpclausen.consentcoin.view {
      class MainActivity {
      }
    }
  }
  

  package dk.hrpclausen.consentcoin {
    package dk.hrpclausen.consentcoin.view {
      class MineTilladelser {
      }
    }
  }
  

  package dk.hrpclausen.consentcoin {
    package dk.hrpclausen.consentcoin.model {
      class MySQLDAO {
      }
    }
  }
  

  package dk.hrpclausen.consentcoin {
    package dk.hrpclausen.consentcoin.model {
      class Person {
      }
    }
  }
  

  package dk.hrpclausen.consentcoin {
    package dk.hrpclausen.consentcoin.view {
      class SendteAnmodninger {
      }
    }
  }
  

  package dk.hrpclausen.consentcoin {
    package dk.hrpclausen.consentcoin.model {
      class Virksomhed {
      }
    }
  }
  

  Anmodning -up-|> OnNavigationItemSelectedListener
  Anmodning -up-|> AppCompatActivity
  BlockchainDAO -up-|> DatabaseDAO
  FirebaseDAO -up-|> DatabaseDAO
  GivTilladelse -up-|> OnNavigationItemSelectedListener
  GivTilladelse -up-|> AppCompatActivity
  MainActivity -up-|> OnNavigationItemSelectedListener
  MainActivity -up-|> AppCompatActivity
  MineTilladelser -up-|> OnNavigationItemSelectedListener
  MineTilladelser -up-|> AppCompatActivity
  MySQLDAO -up-|> DatabaseDAO
  Person -up-|> Bruger
  SendteAnmodninger -up-|> OnNavigationItemSelectedListener
  SendteAnmodninger -up-|> AppCompatActivity
  Virksomhed -up-|> Bruger


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
